# mcp-template

./: .env.example  .gitignore  Dockerfile  IDEAS.md  IDEAS_DATA_AI_POLE.md  IDEAS_PUMP_INDUSTRY.md  README.md  docker-compose.yml  pyproject.toml
documentation/: 01-introduction.md  02-demarrage-rapide.md  03-creer-des-outils.md  04-configuration.md  05-authentification.md  06-deploiement-et-integrations.md  index.md
src/mcp_server/: app.py  config.py  server.py
src/mcp_server/auth/: api_key.py  context.py  dependencies.py  oauth2.py
src/mcp_server/observability/: langfuse.py
src/mcp_server/tools/: __init__.py
src/mcp_server/tools/agent/: __init__.py  functions.py  run.py
src/mcp_server/tools/azure_blob/: __init__.py  get_content.py  list_blobs.py  query_parquet.py
src/mcp_server/tools/azure_devops/: __init__.py  commits.py  pull_requests.py  repos.py  session.py
src/mcp_server/tools/baserow/: __init__.py  rows.py  schema.py
src/mcp_server/tools/deepl/: __init__.py  documents.py  glossary.py  languages.py  translation.py
src/mcp_server/tools/docuware/: __init__.py  cabinets.py  documents.py  search.py
src/mcp_server/tools/langfuse/: __init__.py  stats.py  (+1 more)
src/mcp_server/utils/: apify.py  azure_blob.py  azure_devops_client.py  baserow_client.py  datetime.py  deepl_client.py  docuware_client.py  embedding_client.py  msgraph.py  openwebui_client.py  outline_client.py  pgvector_pool.py  prefect_client.py  sql_connection.py  text.py  wikijs_client.py
tests/: conftest.py  test_auth.py  test_deepl.py  test_health.py  test_ping.py  test_vector_store.py
(+46 files in other folders)
