[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A reusable FastMCP server template with Streamable HTTP transport"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "langfuse>=2.0",
    "pyodbc>=5.0",
    "azure-storage-blob>=12.0",
    "duckdb>=1.0",
    "deepl>=1.21",
    "msal>=1.3",
    "anthropic>=0.40",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "starlette>=1.3.1",
]
